<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Fragment.FragmentEvent"
    android:background="@drawable/dialog_bg"
    >
    <RelativeLayout
        android:id="@+id/relative_guest_main_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >
    <TextView
        android:id="@+id/guest_main_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:text="@string/add_guest"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/_20sdp"
        android:textStyle="bold"
        android:textColor="@color/colorBlack"/>
    </RelativeLayout>
    <View
        android:id="@+id/view1Guest"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_5sdp"
        android:layout_below="@id/relative_guest_main_tv"
        android:background="#AC8F8F"/>
    <ScrollView
        android:layout_below="@id/relative_guest_main_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
<RelativeLayout
    android:id="@+id/relative_editText"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/GuestIDTV"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/id"
        android:visibility="gone"/>
<TextView
    android:id="@+id/Guest_Name_TXT"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/vendorName"
    android:textSize="@dimen/_12sdp"
    android:layout_marginTop="@dimen/_20sdp"
    android:layout_marginStart="@dimen/_20sdp"/>
    <EditText
        android:id="@+id/Guest_name_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/Guest_Name_TXT"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:lines="1"
        android:layout_marginStart="@dimen/_62sdp"
        android:background="@drawable/edittext_border"
        android:hint="@string/enter_here"/>
    <TextView
        android:id="@+id/GuestAddress_TXT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Guest_Name_TXT"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/owner_s_address"
        android:textSize="@dimen/_12sdp"
        android:layout_marginStart="@dimen/_20sdp"/>
    <EditText
        android:id="@+id/GuestAddressEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/GuestAddress_TXT"
        android:layout_below="@id/Guest_name_editText"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:lines="2"
        android:layout_marginStart="@dimen/_4sdp"
        android:background="@drawable/edittext_border"
        android:hint="@string/enter_here"/>
    <TextView
        android:id="@+id/GuestPurpose_TXT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/GuestAddress_TXT"
        android:layout_marginTop="@dimen/_43sdp"
        android:text="@string/purpose"
        android:textSize="@dimen/_12sdp"
        android:layout_marginStart="@dimen/_20sdp"/>
    <EditText
        android:id="@+id/GuestPurposeEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/GuestPurpose_TXT"
        android:layout_below="@id/GuestAddressEditText"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:lines="1"
        android:layout_marginStart="@dimen/_50sdp"
        android:background="@drawable/edittext_border"
        android:hint="@string/enter_here"/>
    <TextView
        android:id="@+id/Guest_Count_TXT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/person"
        android:textSize="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_22sdp"
        android:layout_below="@id/GuestPurpose_TXT"
        android:layout_marginStart="@dimen/_20sdp"/>

    <EditText
        android:id="@+id/Guest_count_editText"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="wrap_content"
        android:layout_below="@id/GuestPurposeEditText"
        android:layout_marginStart="@dimen/_56sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_toEndOf="@id/Guest_Count_TXT"
        android:inputType="number"
        android:hint="@string/_00"
        android:background="@drawable/edittext_border"
        android:lines="1" />

</RelativeLayout>



    <LinearLayout
        android:id="@+id/time_linear"
        android:layout_width="wrap_content"
        android:layout_below="@id/relative_editText"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">
        <LinearLayout
            android:id="@+id/guestTime_linear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_25sdp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/guest_time_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_28sdp"
                android:textSize="@dimen/_15sdp"
                android:textColor="@color/colorBlack"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/guest_time_linear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_25sdp"
            android:orientation="vertical">
            <Button
                android:id="@+id/guest_time_btn"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:text="@string/select_time"
                android:textColor="@color/colorBlack"
                />
        </LinearLayout>
    </LinearLayout>
<View
    android:id="@+id/viewGuest"
    android:layout_width="match_parent"
    android:layout_height="1dp"
    android:layout_marginStart="@dimen/_5sdp"
    android:layout_marginEnd="@dimen/_5sdp"
    android:layout_marginTop="@dimen/_20sdp"
    android:layout_below="@id/time_linear"
    android:background="#AC8F8F"/>
    <Button
        android:id="@+id/confirm_guest_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_20sdp"
        android:layout_below="@id/viewGuest"
        android:layout_centerHorizontal="true"
        android:text="@string/confirm"
        android:textSize="@dimen/_15sdp"
        android:background="#82C13F"
        android:textColor="@color/colorWhite"
        />
</RelativeLayout>
    </ScrollView>
</RelativeLayout>




