<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Fragment.FragmentEvent"
    android:background="@drawable/dialog_bg"
    >
    <RelativeLayout
        android:id="@+id/relative_event_main_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >
    <TextView
        android:id="@+id/event_main_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:text="@string/add_event"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/_20sdp"
        android:textStyle="bold"
        android:textColor="@color/colorBlack"/>
    </RelativeLayout>
    <View
        android:id="@+id/view1Event"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_5sdp"
        android:layout_below="@id/relative_event_main_tv"
        android:background="#AC8F8F"/>
    <ScrollView
        android:layout_below="@id/relative_event_main_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
<RelativeLayout
    android:id="@+id/relative_editText"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/IDTV"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="id"
        android:visibility="gone"/>
    <TextView
        android:id="@+id/EventType_TXT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/event_type"
        android:textSize="@dimen/_12sdp"
        android:layout_marginStart="@dimen/_20sdp"/>
    <EditText
        android:id="@+id/EventTypeEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/place_TXT"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:lines="1"
        android:layout_marginStart="@dimen/_44sdp"
        android:background="@drawable/edittext_border"
        android:hint="@string/enter_here"/>
<TextView
    android:id="@+id/place_TXT"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/place"
    android:textSize="@dimen/_12sdp"
    android:layout_marginTop="@dimen/_20sdp"
    android:layout_below="@id/EventType_TXT"
    android:layout_marginStart="@dimen/_20sdp"/>
    <EditText
        android:id="@+id/event_place_textInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/place_TXT"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:lines="1"
        android:layout_marginStart="@dimen/_44sdp"
        android:layout_below="@id/EventTypeEditText"
        android:background="@drawable/edittext_border"
        android:hint="@string/place_name"/>
<TextView
    android:id="@+id/description_TXT"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/descriptionCardView"
    android:textSize="@dimen/_12sdp"
    android:layout_marginStart="@dimen/_20sdp"
    android:layout_marginTop="@dimen/_20sdp"
    android:layout_below="@id/place_TXT"/>
    <EditText
        android:id="@+id/event_description_textInput"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_13sdp"
        android:lines="4"
        android:inputType="textMultiLine|textCapSentences"
        android:background="@drawable/edittext_border"
        android:layout_toRightOf="@id/description_TXT"
        android:layout_below="@id/place_TXT"
        android:hint="@string/description"/>
</RelativeLayout>



    <LinearLayout
        android:id="@+id/event_date_time_linear"
        android:layout_width="wrap_content"
        android:layout_below="@id/relative_editText"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">
        <LinearLayout
            android:id="@+id/event_date_linear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_25sdp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/event_date_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_28sdp"
                android:textSize="@dimen/_15sdp"
                android:textColor="@color/colorBlack"
                />
            <TextView
                android:id="@+id/event_time_from_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_35sdp"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/_15sdp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_13sdp"
                android:text="@string/to"
                android:layout_marginStart="@dimen/_37sdp"
                android:layout_marginBottom="@dimen/_13sdp"
                android:textSize="@dimen/_15sdp"
                android:textColor="@color/colorBlack"/>
            <TextView
                android:id="@+id/event_time_to_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/_15sdp"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/event_time_from_linear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_25sdp"
            android:orientation="vertical">
            <Button
                android:id="@+id/event_date_btn"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:text="@string/select_date"
                android:textColor="@color/colorBlack"
                />
            <Button
                android:id="@+id/event_time_from_btn"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:text="@string/select_time"
                android:textColor="@color/colorBlack"
                />
            <Button
                android:id="@+id/event_time_to_btn"
                android:layout_marginTop="@dimen/_25sdp"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:text="@string/select_time"
                android:textColor="@color/colorBlack"
                />
        </LinearLayout>
    </LinearLayout>
<View
    android:id="@+id/viewEvent"
    android:layout_width="match_parent"
    android:layout_height="1dp"
    android:layout_marginStart="@dimen/_5sdp"
    android:layout_marginEnd="@dimen/_5sdp"
    android:layout_marginTop="@dimen/_20sdp"
    android:layout_below="@id/event_date_time_linear"
    android:background="#AC8F8F"/>
    <Button
        android:id="@+id/confirm_event_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_20sdp"
        android:layout_below="@id/viewEvent"
        android:layout_centerHorizontal="true"
        android:text="@string/confirm"
        android:textSize="@dimen/_15sdp"
        android:background="#82C13F"
        android:textColor="@color/colorWhite"
        />
</RelativeLayout>
    </ScrollView>
</RelativeLayout>




