<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_bg">

    <RelativeLayout
        android:id="@+id/relative_complain_main_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:id="@+id/complain_main_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:text="@string/add_complain"
            android:layout_centerHorizontal="true"
            android:textSize="@dimen/_20sdp"
            android:textStyle="bold"
            android:textColor="@color/colorBlack"/>
    </RelativeLayout>
    <View
        android:id="@+id/view1Complaint"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_5sdp"
        android:layout_below="@id/relative_complain_main_tv"
        android:background="#AC8F8F"/>
    <ScrollView
        android:layout_below="@id/relative_complain_main_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp">
            <TextView
                android:id="@+id/complain_title_TXT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/complaint_title"
                android:textSize="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginStart="@dimen/_20sdp"/>
            <EditText
                android:id="@+id/complain_title_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/complain_title_TXT"
                android:layout_marginEnd="@dimen/_20sdp"
                android:lines="1"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginStart="@dimen/_30sdp"
                android:background="@drawable/edittext_border"
                android:hint="@string/complaint_title_text"/>
            <TextView
                android:id="@+id/complain_description_TXT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/descriptionCardView"
                android:textSize="@dimen/_12sdp"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_below="@id/complain_title_TXT"/>
            <EditText
                android:id="@+id/complain_description_editText"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginStart="@dimen/_50sdp"
                android:lines="4"
                android:inputType="textMultiLine|textCapSentences"
                android:background="@drawable/edittext_border"
                android:layout_toRightOf="@id/complain_description_TXT"
                android:layout_below="@id/complain_title_TXT"
                android:hint="@string/description"/>

            <View
                android:id="@+id/viewComplain"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_below="@id/complain_description_editText"
                android:background="#AC8F8F"/>
            <Button
                android:id="@+id/confirm_complain_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_20sdp"
                android:layout_below="@id/viewComplain"
                android:layout_centerHorizontal="true"
                android:text="@string/complain_now"
                android:textSize="@dimen/_15sdp"
                android:background="#E1104E"
                android:textColor="@color/colorWhite"
                />
        </RelativeLayout>


    </ScrollView>

</RelativeLayout>